143
Since 2.7.2 this says:
```scala
$$ scalac272 a.scala 
a.scala:2: error: trait A is inherited twice
  trait B extends A with this.type
                  ^
a.scala:2: error: class type required but A.this.type found
  trait B extends A with this.type
                             ^
two errors found
```
which sounds right to me, so I am closing.
